; ModuleID = '/home/carl/AnghaBench/tig/src/extr_blame.c_check_blame_commit.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_blame.c_check_blame_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"Commit data not loaded yet\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"No commit exist for the selected line\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blame*, i32)* @check_blame_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_blame_commit(%struct.blame* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.blame*, align 8
  %5 = alloca i32, align 4
  store %struct.blame* %0, %struct.blame** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.blame*, %struct.blame** %4, align 8
  %7 = getelementptr inbounds %struct.blame, %struct.blame* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = call i32 @report(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %27

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %12
  %16 = load %struct.blame*, %struct.blame** %4, align 8
  %17 = getelementptr inbounds %struct.blame, %struct.blame* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @string_rev_is_null(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %15
  %24 = call i32 @report(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  br label %26

25:                                               ; preds = %15, %12
  store i32 1, i32* %3, align 4
  br label %28

26:                                               ; preds = %23
  br label %27

27:                                               ; preds = %26, %10
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %25
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @report(i8*) #1

declare dso_local i64 @string_rev_is_null(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
